visual bug fixes with table on details page and showheader on mobile devices in widescreen mode

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -561,7 +561,7 @@ table {
   .showheader {
     font-size: 6vw;
     margin-left: 15%;
-    height: 8vh;
+    min-height: 8vh;
   }
 
   .showcontainer {
@@ -643,6 +643,10 @@ table {
     background-color: black;
     padding: 0px;
     margin: 0px;
+  }
+
+  table {
+    margin-left: 20%;
   }
 }
 
